Corrected the letter spacing on the btn-container so it looks more similar to the design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,7 @@ footer {
 
   .btn-container p {
     font-size: 1.6rem;
+    letter-spacing: 0.5rem;
   }
 }
 
